--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/fb_app_id" />
+        
+         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/fb_app_id" />
 
         <activity
             android:name="com.lunarcannon.NanoCat.AndroidLauncher"
@@ -37,7 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity android:name="com.facebook.LoginActivity"/>
         <activity android:name="com.google.android.gms.ads.AdActivity"
              android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
         
