--- a/android/project.properties
+++ b/android/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library.reference.1=..\\..\\Eclipse\\workspace\\google-play-services_lib
 android.library.reference.2=..\\..\\Eclipse\\workspace\\BaseGameUtils
+android.library.reference.3=../../Eclipse/workspace/FacebookSDK
